SomeQuestions.txt




Some Questions about the project:

1.  Is the first BTNode - root -  filled with the first Player in the golferinfo.txt file?
	Aka the first golfer object?  
	Checked the book - yes this is how it is done.  Need to create a way to put first one as root.
	root = new BTNode(E element, null, null)
	Maybe read first data then put others in loop in main program.
	***Or more likely have TreeBag.add recognize the first one somehow?  Could check if root data == null;
	Then add if so.

2.  Are subsequent golfer objects added using the TreeBag.add(E) method?
	Will this align them in the tree?  Is it by alphabetical of last name?
	Comparisons will determine whether it is left or right of root.



3. DisplayAsTree relies on BTNode print.  So the toString() for Golfer Data is needed.
	"data" is printed = golfer object info - should we do it as One line? Or multiple lines of info?


=============
Nice idea!
=============
 4.  Not really a question, but I figured out  basics of how to do TreeBag add.  Will do it in next 24 hours. 9PM Sunday 4/22 - Joe
     didn't upload previous work on it yet.


5. Added some stuff to GolferScoresTree. Noticed some compile errors coming from TreeBag
	TreeBag.java:54: error: incompatible types: E cannot be converted to BTNode<E>
            cursor = element;
                     ^
   Didn't attempt to do anything there since I figured you were more up on that routine that I was at this point. 
   10:50PM Monday 4/23 - Don

6. 
Changed TreeBag.java and put it in a Pull Request - 
Click on Pull Requests tab, click project labeled "TreeBag.java use of BTNode", 
click Files Changed tab to see the changes.   
After a brief review - can merge them somehow.  Haven't pressed that button yet :) - 4/25 Joe 

7. I'll start working on TreeBag.remove this evening - 4/25 - Joe

8. 4/28
   Changed up the add routine a bit in TreeBag since I couldn't get anything to show as actually in it when I added things. 
   Also worked on GolferScoresTree so now you can add a golfer (option 6) and also print all of the golfers in the list (option 1). 
   Left in a few debugging print lines for tracking stuff as it gets added from the txt file, will go through before turning in 
   and clean things up. Didn't get to look at/test the rmove section yet. All compiles and runs as of my latest uploads if you want
   to play with it.
9. 4/30 - DC
   Can now retrieve and view individual golfer and also update individual golfer score/average
   Updated toString method in Golfer.java for better formatting
   
10.  Remove golfer works. - JE 4/30

